# RemoveBGku

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml  security-scan.yml
apps/accounts/: admin.py  apps.py  forms.py  managers.py  models.py
apps/core/: context_processors.py  health.py  logging.py  middleware.py  rate_limit.py  security.py
apps/dashboard/: __init__.py  admin_site.py
apps/jobs/: __init__.py  admin.py  api_urls.py  apps.py  exceptions.py  forms.py  models.py  selectors.py  services.py  signals.py  tasks.py  urls.py  validators.py  views.py
config/: celery.py  urls.py
config/settings/: base.py  development.py  production.py  test.py
deploy/caddy/: Caddyfile
deploy/docker-hub/: README.md
deploy/railway/: README.md
deploy/render/: README.md
deploy/vps/: README.md  backup.sh  bootstrap-server.sh  deploy.sh  update.sh
scripts/: backup.sh  download-models.py  restore.sh  smoke-test.sh  start.sh  wait-for-services.sh
static/admin/: admin.css  charts.js
static/css/: main.css
static/js/: job.js  (+2 more)
templates/: base.html
tests/: conftest.py  test_accounts.py  test_admin.py  test_cleanup.py  test_commands.py  test_forms.py  test_health.py  test_jobs.py  test_security.py  test_storage.py  test_uploads.py  test_views.py
(+25 files in other folders)
