[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "removebgku"
version = "1.0.0"
description = "Penghapus latar belakang gambar server-side berbasis Django dan rembg"
requires-python = ">=3.12,<3.13"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "--strict-markers --disable-warnings --cov=apps --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
target-version = "py312"
line-length = 110
exclude = ["apps/*/migrations/*", ".deps", ".ruff", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "DJ"]
ignore = ["DJ001"]

[tool.coverage.run]
branch = true
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
